@@ -1,5 +1,6 @@
-* Tue Aug 26 2014 Ding-Yi Chen <dchen at redhat.com> - 2.2.2
+* Tue Aug 26 2014 Ding-Yi Chen <dchen at redhat.com> - 2.3.0
 - cmake-fedora-fedpkg: fix try_command
+- ManageChangeLogScript: New command "make"
 
 * Mon Aug 25 2014 Ding-Yi Chen <dchen at redhat.com> - 2.2.1
 - ManageEnvironmentCommon: Module of variable for both normal and script mode.
